--- a/assets/capcha.html
+++ b/assets/capcha.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>reCAPTCHA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
@@ -10,7 +10,7 @@
     <form action="?" method="POST">
       <div
         class="g-recaptcha"
-        data-sitekey="6LcCchkpAAAAAO25RTSSolZgSfk7hIg9Fzed6mQN"
+        data-sitekey="6LeaNBwpAAAAAPodv6Xa7_J1wCY3FW4_1fs61eLJ"
         data-callback="captchaCallback"
       ></div>
     </form>
